// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: DataSources-TVShow Query - TV Show Reviews fetches the reviews of a tv show from TheMovieDB API and returns the result correctly and returns hasMore field as true when has more items to be pagianted 1`] = `
Object {
  "hasMore": true,
  "items": Array [
    Object {
      "author": "author.",
      "content": "content",
      "id": "id",
      "url": "url",
    },
  ],
  "total_pages": 2,
  "total_results": 2,
}
`;

exports[`Integration: DataSources-TVShow Query - TV Show Reviews should query the reviews of a tv show from TheMovieDB API and returns the result correctly 1`] = `
Object {
  "hasMore": false,
  "items": Array [
    Object {
      "author": "author.",
      "content": "content",
      "id": "id",
      "url": "url",
    },
  ],
  "total_pages": 1,
  "total_results": 1,
}
`;
